--- a/index.html
+++ b/index.html
@@ -5,91 +5,105 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metamask</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <title>Crypto Market Place</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
     <script src="https://c0f4f41c-2f55-4863-921b-sdk-docs.github.io/cdn/metamask-sdk.js"></script>
-    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"type="application/javascript"></script><!--     <script src="/dist/ethers.js" type="application/javascript"></script>-->    
-<link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
+    <!--     <script src="/dist/ethers.js" type="application/javascript"></script>-->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Crypto MarketPlace</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Crypto MarketPlace</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div id="container" class="container ">
+        <form class="mb-3" id="create-item-form">
+            <h3>Create new item:</h3>
+            <div class="form-group mb-2">
+                <label for="exampleInputEmail1">Title</label>
+                <input type="text" class="form-control" id="item-title" placeholder="Title">
+            </div>
+            <div class="form-group mb-2">
+                <label for="exampleInputEmail1">Description</label>
+                <input type="text" class="form-control" id="item-description" placeholder="Description">
+            </div>
+            <div class="form-group mb-2">
+                <label for="exampleInputEmail1">Image URL</label>
+                <input type="text" class="form-control" id="item-image-url" placeholder="Image URL">
+            </div>
+            <div class="form-group mb-2">
+                <label for="exampleInputPassword1">Price ETH</label>
+                <input type="number" class="form-control" id="item-price" step="0.01" placeholder="ETH">
+            </div>
+            <div class="form-group mb-2">
+                <label for="exampleInputPassword1">Receiving Address:</label>
+                <input type="text" class="form-control" id="item-address" placeholder="Address">
+            </div>
+            <button type="submit" class="btn btn-primary mt-2">Create new item</button>
+        </form>
+        <div class="container row" id="card-container">
+        </div>
     </div>
-  </div>
-</nav>
-<div id="container" class="container ">
-    <form class="mb-3" id="create-item-form">
-        <h3>Create new item:</h3>
-        <div class="form-group">
-            <label for="exampleInputEmail1">Title</label>
-            <input type="text" class="form-control" id="item-title" aria-describedby="emailHelp" placeholder="title">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputEmail1">Description</label>
-            <input type="text" class="form-control" id="item-description" aria-describedby="emailHelp" placeholder="description">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Price ETH</label>
-            <input type="number" class="form-control" id="item-price" placeholder="price">
-        </div>
-        <button type="submit" class="btn btn-primary mt-2">Create new item</button>
-    </form>
-    <div class="container row" id="card-container">
-    </div>
-</div>
-<script>
-  
-</script>
+    <script>
+
+    </script>
     <script type="module" type="application/javascript">
 
-    const MMSDK = new MetaMaskSDK.default()
+        const MMSDK = new MetaMaskSDK.default()
 
-    const ethereum = MMSDK.getProvider() 
-    /*
-        const getAccount = async function () {
-            let request = await ethereum.request({method: 'eth_requestAccounts'})
-            return request[0];
-        }
-        let metaMask = window.ethereum
-        if(window.ethereum){
-            console.log("ethereum is installed");
-        } else {
-            console.log("ethereum is not installed");
-        }
-        getAccount().then((account) => {
-            console.log(account)
-                metaMask
-            .request({
-            method: 'eth_sendTransaction',
-            params: [
-                {
-                from: account, // The user's active address.
-                to: '0x4000245f73De65C0b7f6eae329821283ee39d716', // Required except during contract publications.
-                value: "DE0B6B3A7640000", // Only required to send ether to the recipient from the initiating external account.
-                gasPrice: '0x09184e72a000', // Customizable by the user during MetaMask confirmation.
-                },
-            ],
-            })
-        });
-        let buy = (e) => {
-            console.log(e)
-        };
-        */
+        const ethereum = MMSDK.getProvider()
+        /*
+            const getAccount = async function () {
+                let request = await ethereum.request({method: 'eth_requestAccounts'})
+                return request[0];
+            }
+            let metaMask = window.ethereum
+            if(window.ethereum){
+                console.log("ethereum is installed");
+            } else {
+                console.log("ethereum is not installed");
+            }
+            getAccount().then((account) => {
+                console.log(account)
+                    metaMask
+                .request({
+                method: 'eth_sendTransaction',
+                params: [
+                    {
+                    from: account, // The user's active address.
+                    to: '0x4000245f73De65C0b7f6eae329821283ee39d716', // Required except during contract publications.
+                    value: "DE0B6B3A7640000", // Only required to send ether to the recipient from the initiating external account.
+                    gasPrice: '0x09184e72a000', // Customizable by the user during MetaMask confirmation.
+                    },
+                ],
+                })
+            });
+            let buy = (e) => {
+                console.log(e)
+            };
+            */
         const provider = new ethers.providers.Web3Provider(window.ethereum)
-        const contractAddress = "0x6E648b6A5F5454Ae3ba27b823DFb06468581854c"
+        const contractAddress = "0x1feE8CB8ddcD4dCfC5c53Cbd0d80db5B2f24F843"
         provider.send("eth_requestAccounts", []);
         const signer = provider.getSigner()
         /*
@@ -98,89 +112,106 @@
             value: ethers.utils.parseEther("1.0")
         });*/
         const daiAbi = [
-            "function storeItem(int price, address owner, string memory title, string memory description) public",
-            "function getItem(uint itemID) external view returns (int price, address owner, string memory buyer, bool paid, string memory title, string memory description)",
+            "function storeItem(int price, address owner, string memory title, string memory description, string memory URLImage) public",
+            "function getItem(uint itemID) external view returns (int price, address owner, string memory buyer, bool paid, string memory title, string memory description, string memory URLImage)",
             "function pay(uint itemID, string memory buyer) public payable",
-            "function getAllItems() external view  returns(int[] memory ids, address[] memory owners, bool[] memory payed, int[] memory prices, string[] memory buyers, string[] memory titles, string[] memory descriptions)"
+            "function getAllItems() external view  returns(int[] memory ids, address[] memory owners, bool[] memory payed, int[] memory prices, string[] memory buyers, string[] memory titles, string[] memory descriptions, string[] memory URLImages)"
         ];
 
         const daiContract = new ethers.Contract(contractAddress, daiAbi, signer);
-
+/*
         daiContract.getItem(1).then((data) => {
             console.log(data)
-        });
+        });*/
         daiContract.getAllItems().then((data) => {
             console.log("Data ", data);
             let items = {};
-            for(let pos in data.ids){
+            for (let pos in data.ids) {
                 items[pos] = {};
                 items[pos].id = data.ids[pos]
 
             }
 
-            for(let price_pos in data.prices){
+            for (let price_pos in data.prices) {
                 items[price_pos].price = data.prices[price_pos];
             }
 
-            for(let pos in data.owners){
+            for (let pos in data.owners) {
                 items[pos].owner = data.owners[pos];
             }
 
-            for(let pos in data.payed){
+            for (let pos in data.payed) {
                 items[pos].paid = data.payed[pos];
             }
 
-            for(let pos in data.buyers){
+            for (let pos in data.buyers) {
                 items[pos].buyer = data.buyers[pos]
             }
 
-            for(let pos in data.titles){
+            for (let pos in data.titles) {
                 items[pos].title = data.titles[pos]
             }
 
-            for(let pos in data.descriptions){
+            for (let pos in data.descriptions) {
                 items[pos].description = data.descriptions[pos]
+            }
+            for (let pos in data.URLImages) {
+                items[pos].URLImage = data.URLImages[pos]
             }
             let cardContainer = document.getElementById("card-container")
             console.log(items)
-            for(let key in items){
-                let paid = items[key].paid 
+            for (let key in items) {
+                let paid = items[key].paid
                 let disabledText = paid ? "disabled" : ""
                 let buyer = items[key].buyer;
                 let buyerText = paid ? `<p><strong>Solded!</strong><p class="card-text"><strong>Buyer</strong>: ${items[key].buyer}</p>` : ""
-               let card = `
-                <div class="card col-lg-4 col-md-4 col-sm-2 m-2" style="width: 18rem;">
-                   <!-- <img src="..." class="card-img-top" alt="..."> -->
+                let urlImage = "https://yt3.googleusercontent.com/ytc/AGIKgqMc57ZF1aaJeZbDCeDs4TKEHWgoVqdqkY22Fii2vg=s900-c-k-c0x00ffffff-no-rj"
+                if (items[key].URLImage) {
+                    urlImage = items[key].URLImage
+                }
+                let card = `
+                <div class="card col-lg-4 col-md-4 col-sm-2 p-2" style="width: 18rem;">
+                   <img src="${urlImage}" class="card-img-top" alt="no image">
                     <div class="card-body">
                         <h5 class="card-title">Item ID: ${parseInt(items[key].id._hex)}</h5>
-                        <p class="card-text"><strong>Price</strong>: ${items[key].price}</p>
+                        <p class="card-text"><strong>Price</strong>: ${items[key].price * Math.pow(10,-18)} ETH</p>
                         <p class="card-text"><strong>Title</strong>: ${items[key].title}</p>
                         <p class="card-text"><strong>Description</strong>: ${items[key].description}</p>
                         ${buyerText}
                         <button class="btn btn-primary buy-button" data-price="${items[key].price}" data-item-id="${parseInt(items[key].id._hex)}" ${disabledText}>Buy</button>
                     </div>
                 </div>
-               `; 
-               cardContainer.innerHTML+=card;
+               `;
+                cardContainer.innerHTML += card;
             }
 
             let elements = document.getElementsByClassName("buy-button")
-            for(let element of elements){
+            for (let element of elements) {
                 element.addEventListener('click', (e) => {
                     let itemID = e.target.getAttribute("data-item-id")
                     let price = e.target.getAttribute("data-price")
-                    console.log(itemID)
-                    console.log(String(price))
+                    //console.log(itemID)
+                    //console.log(String(price))
                     let buyerEmail = prompt("Buyers email?")
-                    daiContract.pay(itemID, buyerEmail, {value: ethers.utils.parseEther(String(price))})
+                    daiContract.pay(itemID, buyerEmail, {value: price})
                 })
             }
         })
 
-        document.getElementById("create-item-form").addEventListener("submit", (e)=>{
+        document.getElementById("create-item-form").addEventListener("submit", (e) => {
             e.preventDefault();
             let target = e.target
-            console.log(target) 
+            console.log(target)
+            let title = document.getElementById("item-title").value;
+            let description = document.getElementById("item-description").value
+            let URLImage = document.getElementById("item-image-url").value
+            let address = document.getElementById("item-address").value
+            //let price = Math.ceil(parseFloat(document.getElementById("item-price").value)*1000000000000000000)
+            let price = document.getElementById("item-price").value
+            
+
+            let bigNumber = BigInt(price*Math.pow(10,18))
+            daiContract.storeItem(bigNumber, address, title, description, URLImage)
         })
 
     </script>
