--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 }
                 let card = `
                 <div class="card col-lg-4 col-md-4 col-sm-2 p-2 m-auto mb-1" style="width: 18rem;">
-                   <img src="${urlImage}" class="card-img-top" alt="no image">
+                   <img src="${urlImage}" class="card-img-top" style="max-height:300px" alt="no image">
                     <div class="card-body">
                         <h5 class="card-title">Item ID: ${parseInt(items[key].id._hex)}</h5>
                         <p class="card-text"><strong>Price</strong>: ${items[key].price * Math.pow(10,-18)} ETH</p>
