--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 let paid = items[key].paid
                 let disabledText = paid ? "disabled" : ""
                 let buyer = items[key].buyer;
-                let buyerText = paid ? `<p><strong>Solded!</strong><p class="card-text"><strong>Buyer</strong>: ${items[key].buyer}</p>` : ""
+                let buyerText = paid ? `<p><strong>Sold!</strong><p class="card-text"><strong>Buyer</strong>: ${items[key].buyer}</p>` : ""
                 let urlImage = "https://yt3.googleusercontent.com/ytc/AGIKgqMc57ZF1aaJeZbDCeDs4TKEHWgoVqdqkY22Fii2vg=s900-c-k-c0x00ffffff-no-rj"
                 if (items[key].URLImage) {
                     urlImage = items[key].URLImage
